--- a/NancyAspNetOwin/NancyAspNetOwin.WebApp/index.html
+++ b/NancyAspNetOwin/NancyAspNetOwin.WebApp/index.html
@@ -1,4 +1,96 @@
 ﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Token Sample</title>
+    <link rel="stylesheet" href="/Content/bootstrap.css" />
+    <link rel="stylesheet" href="/Content/bootstrap-theme.css" />
+    <link rel="stylesheet" href="/Content/form.css" />
+    <link href="Content/login.css" rel="stylesheet" />
+
+    <!-- Custom CSS -->
+    <style>
+        body {
+            padding-top: 70px;
+            /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+        }
+    </style>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                    <li data-bind="visible: showLoginButton">
+                        <a href="#" data-bind="click: showLoginForm">Login</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h1>A Bootstrap Starter Template</h1>
+                <p class="lead">Complete with pre-defined file paths that you won't have to change!</p>
+                <ul class="list-unstyled">
+                    <li>Bootstrap v3.3.1</li>
+                    <li>jQuery v1.11.1</li>
+                </ul>
+                <p class="bg-info" data-bind="text: token"></p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+    </div>
+    <login params="data: token, bus: bus"></login>
+
+    <script type="text/javascript" data-main="App/config" src="Scripts/require.js"></script>
+</body>
+
+</html>
+
+<!--<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Token Sample</title>
@@ -9,13 +101,19 @@
 </head>
 <body>
     <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8"></div>
+            <div class="col-lg-4">
+                <login params="data: token, bus: bus"></login>
+            </div>
+        </div>
         <div class="row" data-bind="visible: showToken">
             <div class="wrapper">
-                <span data-bind="text: token"></span>               
+                <span data-bind="text: token"></span>
             </div>
         </div>
     </div>
 
     <script type="text/javascript" data-main="App/config" src="Scripts/require.js"></script>
 </body>
-</html>
+</html>-->
