finally have a login where i want it.

--- a/NancyAspNetOwin/NancyAspNetOwin.WebApp/App/Authentication/login-control.html
+++ b/NancyAspNetOwin/NancyAspNetOwin.WebApp/App/Authentication/login-control.html
@@ -1,6 +1,6 @@
 ﻿<div id="loginForm" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content wrapper">
+    <div class="modal-dialog wrapper">
+        <div class="modal-content">
             <div class="form-signin">
                 <h3 class="form-signin-heading">Welcome! Please Sign In</h3>
                 <hr class="colorgraph" />
