--- a/NancyAspNetOwin/NancyAspNetOwin.WebApp/index.html
+++ b/NancyAspNetOwin/NancyAspNetOwin.WebApp/index.html
@@ -61,9 +61,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
     <!-- Page Content -->
@@ -77,43 +75,14 @@
                     <li>Bootstrap v3.3.1</li>
                     <li>jQuery v1.11.1</li>
                 </ul>
-                <p class="bg-info" data-bind="text: token"></p>
+                <greeting params="bus: bus"></greeting>
             </div>
         </div>
-        <!-- /.row -->
-
     </div>
+
     <login params="data: token, bus: bus"></login>
 
     <script type="text/javascript" data-main="App/config" src="Scripts/require.js"></script>
 </body>
 
 </html>
-
-<!--<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Token Sample</title>
-    <link rel="stylesheet" href="/Content/bootstrap.css" />
-    <link rel="stylesheet" href="/Content/bootstrap-theme.css" />
-    <link rel="stylesheet" href="/Content/form.css" />
-    <link href="Content/login.css" rel="stylesheet" />
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-8"></div>
-            <div class="col-lg-4">
-                <login params="data: token, bus: bus"></login>
-            </div>
-        </div>
-        <div class="row" data-bind="visible: showToken">
-            <div class="wrapper">
-                <span data-bind="text: token"></span>
-            </div>
-        </div>
-    </div>
-
-    <script type="text/javascript" data-main="App/config" src="Scripts/require.js"></script>
-</body>
-</html>-->
