--- a/NancyAspNetOwin/NancyAspNetOwin.WebApp/index.html
+++ b/NancyAspNetOwin/NancyAspNetOwin.WebApp/index.html
@@ -27,11 +27,9 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 
 <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -66,15 +64,10 @@
 
     <!-- Page Content -->
     <div class="container">
-
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>A Bootstrap Starter Template</h1>
                 <p class="lead">Complete with pre-defined file paths that you won't have to change!</p>
-                <ul class="list-unstyled">
-                    <li>Bootstrap v3.3.1</li>
-                    <li>jQuery v1.11.1</li>
-                </ul>
                 <greeting params="bus: bus"></greeting>
             </div>
         </div>
@@ -83,6 +76,7 @@
     <login params="data: token, bus: bus"></login>
 
     <script type="text/javascript" data-main="App/config" src="Scripts/require.js"></script>
+    <script type="text/javascript" src="Scripts/knockout.cookie.js"></script>
 </body>
 
 </html>
