Some cookie examples.

--- a/NancyAspNetOwin/NancyAspNetOwin.WebApp/index.html
+++ b/NancyAspNetOwin/NancyAspNetOwin.WebApp/index.html
@@ -65,7 +65,7 @@
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-md-12 text-center">
                 <h1>A Bootstrap Starter Template</h1>
                 <p class="lead">Complete with pre-defined file paths that you won't have to change!</p>
                 <greeting params="bus: bus"></greeting>
@@ -76,7 +76,6 @@
     <login params="data: token, bus: bus"></login>
 
     <script type="text/javascript" data-main="App/config" src="Scripts/require.js"></script>
-    <script type="text/javascript" src="Scripts/knockout.cookie.js"></script>
 </body>
 
 </html>
